# spark-rapids-examples

./: .gitignore  CONTRIBUTING.md  README.md  check-license.sh  test.sh
.bsp/: scala-cli.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflow/: signoff-check.yml
.github/workflow/signoff-check/: Dockerfile
.github/workflows/: add-to-project.yml  auto-merge.yml  license-header-check.yml  markdown-links-check.yml  shell-check.yml  signoff-check.yml
.github/workflows/auto-merge/: Dockerfile  action.yml  automerge
.github/workflows/markdown-links-check/: markdown-links-check-config.json
.github/workflows/signoff-check/: Dockerfile  action.yml  signoff-check
.metals/: metals.lock.db  metals.mv.db
.scala-build/: ide-envs.json  ide-inputs.json
.scala-build/.bloop/: spark-rapids-examples_b9e3b2191b-test.json  spark-rapids-examples_b9e3b2191b.json  spark-rapids-examples_f4dd477a3a-test.json  spark-rapids-examples_f4dd477a3a.json
benchmark/: bench_optuna-xgboost_cpu.py  bench_optuna-xgboost_gpu.py
datasets/: README.md  README.md.md  datasets.tgz  preparing_datasets.md
datasets/cuspatial_data/points/: part-00000-58175fd9-0cb3-4244-870b-c4a8d2bc0631-c000.snappy.parquet  part-00001-58175fd9-0cb3-4244-870b-c4a8d2bc0631-c000.snappy.parquet
datasets/cuspatial_data/polygons/: polygons.shp  polygons.shx
datasets/mortgage/Acquisition/: Acquisition_2000Q1.txt
datasets/mortgage/Performance/: Performance_2000Q1-P.txt
datasets/tpcds/catalog_sales/: catalog_sales.parquet
datasets/tpcds/customer/: customer.parquet
datasets/tpcds/date_dim/: date_dim.parquet
datasets/tpcds/item/: item.parquet
dockerfile/: Dockerfile  gpu_executor_template.yaml
docs/api-docs/xgboost-examples-api-docs/: python.md  scala.md
docs/trouble-shooting/: xgboost-examples-trouble-shooting.md
examples/: optuna-mysql-spark.py  optuna-mysql-xgboost-spark-rdd.py  optuna-mysql-xgboost-spark.py  pom.xml
examples/ETL+XGBoost-Examples/: README.md
examples/MIG-Support/: README.md
examples/MIG-Support/yarn-unpatched/: README.md
examples/MIG-Support/yarn-unpatched-312until330/: README.md
examples/ML+DL-Examples/Optuna-Spark/: .gitignore  README.md
examples/RAPIDS-UDF-Examples/RAPIDS-accelerated-UDFs/: README.md  pom.xml
examples/RAPIDS-UDF-Examples/Spark-cuSpatial/: Dockerfile  Dockerfile.awsdb  gpu-run.sh
examples/RAPIDS-accelerated-UDFs/: README.md  pom.xml  pytest.ini  run_pyspark_from_build.sh
examples/SQL+DF-Examples/PCBS-benchmark/: README.md
examples/SQL+DF-Examples/customer-churn/: README.md
examples/SQL+DF-Examples/demo/: Spark_get_json_object.ipynb  Spark_parquet_microkernels.ipynb
examples/SQL+DF-Examples/micro-benchmarks/: README.md
examples/Spark-DL/: Dockerfile.conda_db
examples/Spark-ETL+XGBoost/: README.md  pom.xml
examples/Spark-ETL+XGBoost(splitting)/: README.md
examples/Spark-cuSpatial/: Dockerfile.awsdb  README.md  gpu-run.sh  pom.xml
examples/UDF-Examples/RAPIDS-accelerated-UDFs/src/main/cpp/: CMakeLists.txt
examples/UDF-Examples/RAPIDS-accelerated-UDFs/src/main/cpp/benchmarks/: CMakeLists.txt
examples/UDF-Examples/RAPIDS-accelerated-UDFs/src/main/cpp/benchmarks/cosine_similarity/: cosine_similarity_benchmark.cpp
examples/UDF-Examples/RAPIDS-accelerated-UDFs/src/main/cpp/benchmarks/synchronization/: synchronization.hpp
examples/UDF-Examples/RAPIDS-accelerated-UDFs/src/main/cpp/src/: CosineSimilarityJni.cpp  IntegerAverageJni.cpp  StringWordCountJni.cpp  cosine_similarity.cu  integer_average.cu  integer_average.hpp  integer_average_host_udf.cpp  integer_average_host_udf.hpp  string_word_count.cu  string_word_count.hpp
examples/UDF-Examples/Spark-cuSpatial/src/main/native/: CMakeLists.txt
examples/UDF-Examples/Spark-cuSpatial/src/main/native/src/: PointInPolygonJni.cpp
examples/XGBoost-Examples/: .gitignore  README.md  main.py  pack_pyspark_example.sh  pom.xml
examples/agaricus/: pom.xml
examples/aggregator/: pom.xml
examples/app-parameters/: supported_xgboost_parameters_python.md
examples/criteo_train/: Criteo Training.ipynb  Dockerfile  README.md  criteo_keras.py  spark-env.sh  start-spark.sh  submit.sh
examples/cuSpatial-UDF/: Dockerfile  README.md  gpu-run.sh  pom.xml  spatial_join.py
examples/databricks/: init_optuna_xgboost.sh
examples/micro-benchmarks/: README.md
examples/pca/: Dockerfile  PCA example notebook.ipynb  PCA-example-notebook.ipynb  README.md  main.scala  pom.xml  spark-env.sh  spark-submit.sh  start-spark.sh
examples/pcbs-benchmark/: .gitignore  README.md  benchmark-multiple-files.sh  pcbs-benchmark.sh  pom.xml
examples/spark-connect-for-etl-and-ml/: README.md  docker-compose.yaml
examples/spark-connect-gpu/: README.md  docker-compose.yaml
examples/standalone/: run-optuna-spark-xgboost.sh  run-optuna-spark.sh
examples/taxi/: pom.xml
metastore_db/: db.lck  service.properties
metastore_db/log/: log.ctrl
optuna/: README.md  optuna-mysql-spark.py  optuna-mysql-xgboost-spark.py  readme.md  run-optuna-spark-xgboost.sh  run-optuna-spark.sh
optuna-examples/databricks/: init_optuna_xgboost.sh
optuna-examples/standalone/: run-joblibspark-xgboost.sh
optuna-spark/: README.md
optuna-spark/optuna-examples/: joblibspark-xgboost.py
optuna/databricks/: README.md  optuna-mysql-spark-databricks.py  optuna-mysql-xgboost-spark-databricks-rdd.py  optuna-mysql-xgboost-spark-databricks.py
scripts/: README.md
scripts/building/: python_build.sh
scripts/csp-startup-scripts/: README.md  cgroup-bootstrap-action-emr6.sh
scripts/emr-startup-scripts/: config-emr7.json
scripts/encoding-sample/: repartition.py  run.sh  truncate-model.py
tools/databricks/: README.md  [RAPIDS Accelerator for Apache Spark] Profiling Tool Notebook Template.ipynb  [RAPIDS Accelerator for Apache Spark] Qualification Tool Notebook Template.ipynb  [RAPIDS Accelerator for Apache Spark] Qualification User Tool Notebook Template.ipynb
tools/emr/: README.md  [RAPIDS Accelerator for Apache Spark] Profiling Tool Notebook Template.ipynb  [RAPIDS Accelerator for Apache Spark] Qualification Tool Notebook Template.ipynb
(+571 files in other folders)
